--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+:<<COMMENT'
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -23,3 +24,5 @@ yarn-debug.log*
 yarn-error.log*
 
 package-lock.json
+
+'COMMNET
