--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
-    "antd": "^3.25.3",
+    "@ant-design/compatible": "^1.0.0",
+    "antd": "^4.0.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
