--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
     "@babel/core": "7.6.0",
+    "@loadable/component": "^5.12.0",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
@@ -142,7 +143,8 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      "@babel/preset-react"
     ],
     "plugins": [
       [
@@ -152,7 +154,8 @@
           "style": "css"
         }
       ],
-      "@babel/plugin-proposal-optional-chaining"
+      "@babel/plugin-proposal-optional-chaining",
+      "@babel/plugin-syntax-dynamic-import"
     ]
   },
   "devDependencies": {
